--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /GreedyRobot/GreedyRobot.vcxproj.user
 /GreedyRobot/GreedyRobot.vcxproj
 /GreedyRobot/GreedyRobot.sln
+/Catalan/.vs/Catalan/v16
+/Catalan/Catalan.vcxproj
+/Catalan/Catalan.vcxproj.user
+/Catalan/Catalan.vcxproj.filters
+/Catalan/Catalan.sln
