--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /Catalan/Catalan.vcxproj.user
 /Catalan/Catalan.vcxproj.filters
 /Catalan/Catalan.sln
+/Catalan/x64/Debug
+/GreedyRobot/Debug
+/Catalan/a.out
+/Catalan/Catalan
