--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,18 @@
 /Catalan/a.out
 /Catalan/Catalan
 /Catalan/catalan.out
+/Catalan/x64/Release/Catalan.tlog
+/Catalan/x64/Release
+/GreedyRobot
+/List342/.vs/List342/v16
+/List342/Debug
+/List342/List342.vcxproj.user
+/List342/List342.vcxproj.filters
+/List342/List342.vcxproj
+/List342/List342.sln
+/Pointers/.vs/Pointers/v16
+/Pointers/Debug
+/Pointers/Pointers.sln
+/Pointers/Pointers.vcxproj
+/Pointers/Pointers.vcxproj.filters
+/Pointers/Pointers.vcxproj.user
