--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@
 /Pointers/Pointers.vcxproj.user
 /Bird/bird.cpp
 /Bird/bird.h
+/List342/Release/List342.tlog
+/List342/Release
+/List342/childExample.txt
+/List342/LatchagueLab3.zip
+/List342/List342.cpp
+/List342/list342.h.gch
+/List342/Output.txt
