--- a/.gitignore
+++ b/.gitignore
@@ -3,42 +3,29 @@
 ################################################################################
 
 /.vs
-/GreedyRobot/.vs/GreedyRobot/v16
-/GreedyRobot/GreedyRobot.vcxproj.filters
-/GreedyRobot/GreedyRobot.vcxproj.user
-/GreedyRobot/GreedyRobot.vcxproj
-/GreedyRobot/GreedyRobot.sln
-/Catalan/.vs/Catalan/v16
-/Catalan/Catalan.vcxproj
-/Catalan/Catalan.vcxproj.user
-/Catalan/Catalan.vcxproj.filters
-/Catalan/Catalan.sln
-/Catalan/x64/Debug
-/GreedyRobot/Debug
-/Catalan/a.out
-/Catalan/Catalan
-/Catalan/catalan.out
-/Catalan/x64/Release/Catalan.tlog
-/Catalan/x64/Release
+/Catalan
 /GreedyRobot
 /List342/.vs/List342/v16
 /List342/Debug
-/List342/List342.vcxproj.user
-/List342/List342.vcxproj.filters
+/List342/Release
+/List342/a.out
+/List342/childExample.txt
+/List342/LatchagueProgram3.zip
+/List342/List342.cpp
+/List342/list342.h.gch
 /List342/List342.vcxproj
 /List342/List342.sln
+/List342/List342.vcxproj.filters
+/List342/List342.vcxproj.user
+/List342/Output.txt
 /Pointers/.vs/Pointers/v16
 /Pointers/Debug
 /Pointers/Pointers.sln
-/Pointers/Pointers.vcxproj
-/Pointers/Pointers.vcxproj.filters
 /Pointers/Pointers.vcxproj.user
-/Bird/bird.cpp
-/Bird/bird.h
-/List342/Release/List342.tlog
-/List342/Release
-/List342/childExample.txt
-/List342/LatchagueLab3.zip
-/List342/List342.cpp
-/List342/list342.h.gch
-/List342/Output.txt
+/Pointers/Pointers.vcxproj.filters
+/Pointers/Pointers.vcxproj
+/Sorting/.vs/Sorting/v16
+/Sorting/Sorting.sln
+/Sorting/Sorting.vcxproj
+/Sorting/Sorting.vcxproj.filters
+/Sorting/Sorting.vcxproj.user
